--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                         <h4 class="text-xl font-bold mb-4">Quick Links</h4>
                         <ul class="space-y-2">
                             <li><a href="/" class="text-purple-100 hover:text-white transition duration-300">Home</a></li>
+                            <li><a href="/game/ovo-unblocked.html" class="text-purple-100 hover:text-white transition duration-300">OvO Unblocked</a></li>
                         </ul>
                     </div>
                     
